operators/keycloak/base/keycloak-instance.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-db
  namespace: rhbk
  labels:
    app: postgresql
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
  namespace: rhbk
  labels:
    app: postgresql
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  serviceName: postgresql-db
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: registry.redhat.io/rhel9/postgresql-15:latest
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
